# kokkos-c-20

./: CMakeLists.txt  Dockerfile
sample/: CMakeLists.txt  sample.cpp  sample.h
script/: build.sh
